# numerical-optimization

./: .gitignore  main.tex  ref.bib
.devcontainer/: Dockerfile  devcontainer.json
assignments/: pyproject.toml
assignments/common/: pyproject.toml
assignments/common/src/common/: lp_problem.py
assignments/common/src/common/netlib/: load_netlib_problems.py
assignments/common/tests/: research_log.md  test_netlib_problems.py
assignments/ipm/: README.md  pyproject.toml
assignments/ipm/src/ipm/: __init__.py  ipm_tools.py  predictor_corrector.py
assignments/ipm/src/ipm_solutions/: __init__.py  ipm_tools.py  predictor_corrector.py
assignments/ipm/tests/: test_ipm.py
assignments/simplex/: .gitignore  README.md  pyproject.toml
assignments/simplex/src/: simplex_util.py
assignments/simplex/src/common/: numpy_type_aliases.py
assignments/simplex/src/simplex/: __init__.py  dual_simplex.py  linear_algebra.py  lp_problem.py  math.py  pivoting_strategy.py  primal_simplex.py  solver.py
assignments/simplex/src/simplex_solutions/: __init__.py  dual_simplex.py  linear_algebra.py  lp_problem.py  math.py  pivoting_strategy.py  primal_simplex.py  solver.py
assignments/simplex/tests/: conftest.py  test_array_typing.py  test_simplex.py
chapters/: fundamentals_of_unconstrained_optimization.tex  line_search_methods.tex  lp_interior_point_methods.tex  lp_the_simplex_method.tex  theory_of_constrained_optimization.tex
