[project]
name = "common"
version = "0.1.0"
description = "Common utilities for numerical optimization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jaxtyping>=0.3.9",
    "numpy>=2.4.2",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"


[tool.ruff]
lint.ignore = ["F722"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true
